--- a/takephoto_library/build.gradle
+++ b/takephoto_library/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
-
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
+    //useLibrary 'org.apache.http.legacy'
     defaultConfig {
 //        applicationId "com.jph.takephoto"
         minSdkVersion 8
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -17,9 +17,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    /*
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
+    */
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile "org.apache.httpcomponents:httpcore:4.4.4"
+    //compile "org.apache.httpcomponents:httpmime:4.5.2"
 //    compile 'com.android.support:appcompat-v7:23.0.0'
 }
