--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -16,29 +16,37 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:label="@string/app_name">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="image/*"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".Webview"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_webview"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:configChanges="orientation|screenSize">
-        </activity>
-
+            android:theme="@style/AppTheme.Webview"></activity>
+        <activity
+            android:name=".Describe"
+            android:configChanges="orientation|screenSize"
+            android:theme="@android:style/Theme.Material.Light.Dialog"></activity>
         <activity
             android:name=".preferences.MyPreferencesActivity"
             android:label="@string/action_settings"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme.Settings" />
     </application>
 
 </manifest>
